{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 22,
  "lineage": "c7da9070-34a6-bbea-f448-77cd47d02eac",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "webserver1-static-address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.77.95.236",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-09-30T14:46:16.749-07:00",
            "id": "projects/cloudcomputing-311313/regions/europe-west1/addresses/webserver1-static-ip",
            "name": "webserver1-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "cloudcomputing-311313",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/regions/europe-west1/addresses/webserver1-static-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/zones/europe-west1-b/instances/webserver1"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "webserver2-static-address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.77.109.3",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-09-30T14:46:16.666-07:00",
            "id": "projects/cloudcomputing-311313/regions/europe-west1/addresses/webserver2-static-ip",
            "name": "webserver2-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "cloudcomputing-311313",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/regions/europe-west1/addresses/webserver2-static-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/zones/europe-west1-b/instances/webserver2"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mysql-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-09-30T13:57:31.507-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cloudcomputing-311313/global/firewalls/ftp",
            "log_config": [],
            "name": "ftp",
            "network": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/global/networks/vpc-network",
            "priority": 1000,
            "project": "cloudcomputing-311313",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/global/firewalls/ftp",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "webserver1",
              "webserver2"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "sql-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-09-30T13:57:31.678-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cloudcomputing-311313/global/firewalls/ssh",
            "log_config": [],
            "name": "ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/global/networks/vpc-network",
            "priority": 1000,
            "project": "cloudcomputing-311313",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/global/firewalls/ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "sql-server",
              "webserver1",
              "webserver2"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "web-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-09-30T13:57:31.509-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cloudcomputing-311313/global/firewalls/http",
            "log_config": [],
            "name": "http",
            "network": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/global/networks/vpc-network",
            "priority": 1000,
            "project": "cloudcomputing-311313",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/global/firewalls/http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "webserver1",
              "webserver2"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "sql-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20210512",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/zones/europe-west1-b/disks/sql-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cloudcomputing-311313/zones/europe-west1-b/instances/sql-server",
            "instance_id": "8040355059675663936",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "almu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDjn5k0ED0AE6A+/cebU3umLbYvJqbyhpDSO8pvgQcBIlKVEWQjoypIXphOeaSSM2vNwrNWEsx/hJ36/v9DfBclgp3Pd64gaz3+l9YX8mCuL2hZgEmV92T2O/SyrZfpZzFZs6lzb/LuAZmuc3Uq6rG/pEDWzOMBOueDMiwRGR/sMZfnI0wUs44gcg8kugVRxolvj/Isl7uzqBGI+ON0xKEq8pjBVDH0uHeD/AycFvRPUCwfihatpMi5fJHrRuzu17QcN9RLqpnvKJrbcPsRpj2w716JsfL5hC3RuzUWdLReuUYb+TivapfQhQne3NLIMuK4+6muDxHqKgnPMfe+SJyy6osGVrcrPEX7y/xsnXrTnz1Pv+03ayZjp17Nevo9485eftR/GzR0XB/0/K6KWp+NS0u1AendTm1rdyQIibWHt7AC [...]
            },
            "metadata_fingerprint": "GG7g3ikKdoM=",
            "name": "sql-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.205.142.115",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/global/networks/vpc-network",
                "network_ip": "10.132.0.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/regions/europe-west1/subnetworks/vpc-network",
                "subnetwork_project": "cloudcomputing-311313"
              }
            ],
            "project": "cloudcomputing-311313",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/zones/europe-west1-b/instances/sql-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "sql-server"
            ],
            "tags_fingerprint": "18Pkl6a2Cqg=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20210512",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/zones/europe-west1-b/disks/webserver1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cloudcomputing-311313/zones/europe-west1-b/instances/webserver1",
            "instance_id": "1074577095280794195",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "almu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDjn5k0ED0AE6A+/cebU3umLbYvJqbyhpDSO8pvgQcBIlKVEWQjoypIXphOeaSSM2vNwrNWEsx/hJ36/v9DfBclgp3Pd64gaz3+l9YX8mCuL2hZgEmV92T2O/SyrZfpZzFZs6lzb/LuAZmuc3Uq6rG/pEDWzOMBOueDMiwRGR/sMZfnI0wUs44gcg8kugVRxolvj/Isl7uzqBGI+ON0xKEq8pjBVDH0uHeD/AycFvRPUCwfihatpMi5fJHrRuzu17QcN9RLqpnvKJrbcPsRpj2w716JsfL5hC3RuzUWdLReuUYb+TivapfQhQne3NLIMuK4+6muDxHqKgnPMfe+SJyy6osGVrcrPEX7y/xsnXrTnz1Pv+03ayZjp17Nevo9485eftR/GzR0XB/0/K6KWp+NS0u1AendTm1rdyQIibWHt7AC [...]
            },
            "metadata_fingerprint": "GG7g3ikKdoM=",
            "name": "webserver1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.77.95.236",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/global/networks/vpc-network",
                "network_ip": "10.132.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/regions/europe-west1/subnetworks/vpc-network",
                "subnetwork_project": "cloudcomputing-311313"
              }
            ],
            "project": "cloudcomputing-311313",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/zones/europe-west1-b/instances/webserver1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "webserver1"
            ],
            "tags_fingerprint": "W_KuGwU-g7k=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_address.webserver1-static-address",
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "webserver2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20210512",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/zones/europe-west1-b/disks/webserver2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cloudcomputing-311313/zones/europe-west1-b/instances/webserver2",
            "instance_id": "6097699561663074009",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "almu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDjn5k0ED0AE6A+/cebU3umLbYvJqbyhpDSO8pvgQcBIlKVEWQjoypIXphOeaSSM2vNwrNWEsx/hJ36/v9DfBclgp3Pd64gaz3+l9YX8mCuL2hZgEmV92T2O/SyrZfpZzFZs6lzb/LuAZmuc3Uq6rG/pEDWzOMBOueDMiwRGR/sMZfnI0wUs44gcg8kugVRxolvj/Isl7uzqBGI+ON0xKEq8pjBVDH0uHeD/AycFvRPUCwfihatpMi5fJHrRuzu17QcN9RLqpnvKJrbcPsRpj2w716JsfL5hC3RuzUWdLReuUYb+TivapfQhQne3NLIMuK4+6muDxHqKgnPMfe+SJyy6osGVrcrPEX7y/xsnXrTnz1Pv+03ayZjp17Nevo9485eftR/GzR0XB/0/K6KWp+NS0u1AendTm1rdyQIibWHt7AC [...]
            },
            "metadata_fingerprint": "GG7g3ikKdoM=",
            "name": "webserver2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.77.109.3",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/global/networks/vpc-network",
                "network_ip": "10.132.0.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/regions/europe-west1/subnetworks/vpc-network",
                "subnetwork_project": "cloudcomputing-311313"
              }
            ],
            "project": "cloudcomputing-311313",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/zones/europe-west1-b/instances/webserver2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "webserver2"
            ],
            "tags_fingerprint": "-Qa40A_VCmk=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_address.webserver2-static-address",
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/cloudcomputing-311313/global/networks/vpc-network",
            "mtu": 0,
            "name": "vpc-network",
            "project": "cloudcomputing-311313",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcomputing-311313/global/networks/vpc-network"
          }
        }
      ]
    }
  ]
}